# copped-aio-open-source

./: README.md
aio-database-api/: Dockerfile  go.mod  go.sum  main.go  openapi.yaml
aio-database-api/database/: Connect.go  Get.go
aio-database-api/global/: AddPing.go  AddProduct.go
aio-database-api/handler/: Add.go  Get.go
aio-database-api/link/: Get.go  New.go  Values.go
aio-database-api/log/: Handle.go  Values.go
aio-database-api/mail/: New.go  Send.go  Values.go  mail.html
aio-database-api/preharvest/: Initialize.go  Sort.go  manager.go  parseSchedule.go  requests.go
aio-database-api/product/: Cache.go  Get.go  GlobalWhitelisted.go  New.go  Save.go  Update.go  Values.go
aio-database-api/user/: Checkouts.go  Get.go  Jwt.go  New.go  Store.go  Update.go  Values.go
aio-frontend-api/: Dockerfile  go.mod  go.sum  main.go
aio-frontend-api/handler/: Add.go  Get.go
aio-frontend-api/html/: captcha.html  dashboard.html  utility.html
aio-instances-api/: go.mod  go.sum  main.go
aio-instances-api/client/: Dockerfile
aio-instances-api/handler/: Add.go  Handle.go  post.go
aio-monitor-api/: Dockerfile  go.mod  go.sum  main.go
aio-monitor-api/ai-model/: TL0.F-diff.json  TL0.F-intra.json  ai-model-cli
aio-monitor-api/api/: Internal.go  Send.go  Values.go
aio-monitor-api/handler/: Add.go
aio-monitor-api/monitor/: Loop.go
aio-monitor-api/request/: Get.go  Post.go
aio-payments/: app.go  go.mod  go.sum  main.go  wails.json
aio-payments/frontend/: index.html  package-lock.json  package.json.md5
aio-payments/payments/: Handle.go  Values.go  aboutyou.go  get.go  post.go  setCookie.go  waitUrl.go
aio-payments/settings/: Get.go  Login.go  Save.go  Update.go  Values.go
aio-payments/websocket/: Connect.go  Read.go  Values.go
aio-service-api/: go.mod  go.sum  main.go
aio-service-api/handler/: Add.go
aio-service-api/ping/: Start.go
aio-types/: go.mod  go.sum
client-local/: .gitignore  Cargo.toml
client-local-v2/: Cargo.toml
client-local-v2/.github/workflows/: rust.yml
client-local-v2/src/: api.rs  cache.rs  checkout.rs  console.rs  data.rs  jig.rs  login.rs  main.rs  payments.rs  session.rs  settings.rs  threads.rs  websocket.rs
client-local-v2/src/aboutyou/: mod.rs  module.rs
client-local-v2/src/kitheu/: captcha.rs  mod.rs  module.rs
client-local-v2/src/request/: cookie.rs  expected.rs  mod.rs  proxy.rs  response.rs
client-local-v3/: Cargo.toml
client-local-v3/.github/workflows/: rust.yml
client-local-v3/src/: api.rs  cache.rs  console.rs  data.rs  jig.rs  main.rs  session.rs  settings.rs  threads.rs  websocket.rs
client-local-v3/src/modules/: kitheu.rs  mod.rs  queueit.rs
client-local-v3/src/request/: cookie.rs  expected.rs  mod.rs  proxy.rs  response.rs
client-local/.github/workflows/: rust.yml
client-local/src/: main.rs
client-local/src/api/: mod.rs
client-local/src/captcha/: mod.rs
client-local/src/console/: mod.rs
client-local/src/data/: checkout.rs  mod.rs  values.rs
client-local/src/jig/: mod.rs
client-local/src/login/: mod.rs  values.rs
client-local/src/modules/: kitheu.rs  mod.rs  rates.rs  session.rs  shopify.rs
client-local/src/performance/: mod.rs
client-local/src/request/: cookie.rs  expected.rs  mod.rs  proxy.rs  res.rs
client-local/src/settings/: mod.rs  values.rs
client-local/src/websocket/: mod.rs
(+256 files in other folders)
