[package]
name = "client-local-v3"
version = "2.1.6"
edition = "2021"

[dependencies]
chrono = { version="0.4.19", features=["serde"] }
tokio = { version="1.29.0", features=["full"] }
serde = { version="1.0.164", features=["derive"] }
reqwest = { version="0.11.18", features=["json", "brotli", "gzip", "rustls-tls"] }
tungstenite = { version="0.19.0", features=["native-tls"] }
lazy_static = "1.4.0"
platform-dirs = "0.3.0"
serde_json = "1.0.99"
async-recursion = "1.0.4"
spin_sleep = "1.1.1"
self_update = "0.37.0"
tempfile = "3.6.0"
rand = "0.8.5"
headers = "0.3.8"
futures = "0.3.28"
regex = "1.8.4"
country-emoji = "0.2.0"
base64 = "0.21.2"
urlencoding = "2.1.2"