[package]
name = "client-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.num_cpus]
version = "1"

[dependencies.serde_json]
version = "1.0"

[dependencies.futures]
version = "0.3"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.systemstat]
version = "0.2.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_urlencoded]
version = "0.7"

[dependencies.urlencoding]
version = "2.1.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.base64]
version = "0.13.0"

[dependencies.hyper-tls]
version = "0.5.0"

[dependencies.reqwest]
version = "0.11"
features = ["json", "brotli", "gzip"]

[dependencies.headers]
version = "0.3"

[dependencies.platform-dirs]
version = "0.3.0"

[dependencies.tungstenite]
version = "0.17.2"
features = ["native-tls"]

[dependencies.async-recursion]
version = "1.0.0"

[dependencies.regex]
version = "1"

[dependencies.rand]
version = "0.8.5"

[dependencies.flate2]
version = "1.0.24"

[dependencies.country-emoji]
version = "0.2.0"

[dependencies.open]
version = "3.0.2"